[ADD] - 장바구니에 담긴 상품 수량 출력

--- a/src/main/resources/static/css/css/default.css
+++ b/src/main/resources/static/css/css/default.css
@@ -194,6 +194,7 @@ main {
   font-weight: 400;
   font-family: Arial, sans-serif;
 }
+.sidebar .sidebar_nav li button:hover,
 .sidebar .sidebar_nav li a:hover {
   color: #cccccc;
 }
