--- a/src/main/resources/static/css/scss/layout/_sidebar.scss
+++ b/src/main/resources/static/css/scss/layout/_sidebar.scss
@@ -43,6 +43,7 @@
                 font-family: Arial, sans-serif;
             }
 
+            button:hover,
             a:hover {
                 color: #cccccc;
             }
