--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -29,6 +29,7 @@
                                         <th style="width: auto;" scope="col">상품정보</th>
                                         <th style="width: 10%;" scope="col">수량</th>
                                         <th style="width: 10%;" scope="col">상품구매금액</th>
+                                        <th style="width: 10%;" scope="col">적립금액</th>
                                         <th style="width: 10%;" scope="col">주문처리상태</th>
                                         <th style="width: 10%;" scope="col">취소/교환/반품</th>
                                     </tr>
@@ -56,8 +57,10 @@
                                                 </td>
                                                 <td th:text="${orderItem.count}"></td>
                                                 <td>
-                                                    <strong
-                                                        th:text="|${#numbers.formatInteger(orderItem.price, 0, 'COMMA')}원|"></strong>
+                                                    <strong th:text="|${#numbers.formatInteger((orderItem.price * orderItem.count), 0, 'COMMA')}원|"></strong>
+                                                </td>
+                                                <td>
+                                                    <strong th:text="|${#numbers.formatInteger(((orderItem.price * orderItem.count) * 0.05), 0, 'COMMA')}원|"></strong>
                                                 </td>
                                                 <td class="state">
                                                     <span th:if="${order.orderStatus == orderStatus}">배송 준비중</span>
@@ -91,8 +94,10 @@
                                             </td>
                                             <td th:text="${orderItem.count}"></td>
                                             <td>
-                                                <strong
-                                                    th:text="|${#numbers.formatInteger(orderItem.price, 0, 'COMMA')}원|"></strong>
+                                                <strong th:text="|${#numbers.formatInteger((orderItem.price * orderItem.count), 0, 'COMMA')}원|"></strong>
+                                            </td>
+                                            <td>
+                                                <strong th:text="|${#numbers.formatInteger(((orderItem.price * orderItem.count) * 0.05), 0, 'COMMA')}원|"></strong>
                                             </td>
                                             <td class="state">
                                                 <span th:if="${order.orderStatus == orderStatus}">배송 준비중</span>
